Migrate to Java 17 and Velocity 2.x (STD-14280)
- Bump compiler plugin 3.8.1→3.13.0, target 1.8→release 17
- Bump surefire 3.0.0-M3→3.2.5; add locale argLine for stable test output
- Velocity: velocity:1.5 → velocity-engine-core:2.3 + slf4j-simple binding
- VelocityConnection: remove Velocity 1.x LogSystem API; set parser.space_gobbling=bc
  for backward-compatible whitespace (block directives eat trailing newline)
- VelocityContextAdapter: update Context method signatures to Velocity 2.x (String keys)
- PropertiesSubstitutor: replace javax.xml.bind.DatatypeConverter (removed in Java 11)
  with java.util.Base64
- Script driver: add nashorn-core:15.4 test dep (Nashorn removed from JDK 17);
  extend ScriptEngineWrapper detection to org.openjdk.nashorn.* class name
- CI: java-version 8 → 17
- PMD targetJdk 1.8 → 17
- Add .gitignore (target/, project-local files)